--- a/package.json
+++ b/package.json
@@ -12,14 +12,15 @@
     "@types/react-dom": "^18.0.5",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-dotenv": "^0.1.3",
     "react-scripts": "5.0.1",
     "typescript": "^4.7.4",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
-    "start": "react-scripts start",
-    "build": "react-scripts build",
-    "eject": "react-scripts eject",
+    "start": "react-dotenv && react-scripts start",
+    "build": "react-dotenv && react-scripts build",
+    "eject": "react-dotenv && react-scripts eject",
     "lint": "eslint \"**/*.{js,ts,tsx}\" --quiet --fix",
     "format": "prettier --write .",
     "test": "jest --forceExit"
